--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Title<title>
+  <title>Creative Website Title<title>
 </head>
 <body>
-  <h1>Hello World!</h1>
+  <h1>Welcome to my website!</h1>
+  <h3>Blog Post 1: </h3>
+  <a href="https://blyons2021.github.io/blogpost1">"The Pragmatic Programmer"</a>
   <footer>blyons2021 - 2020</footer>
 </body>
 </html>
