--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Welcome to my website!</h1>
   <h3>Blog Post 1: </h3>
-  <a href="https://blyons2021.github.io/blogpost1">"The Pragmatic Programmer"</a>
+  <a href="https://blyons2021.github.io/blogpost1.html">"The Pragmatic Programmer"</a>
   <footer>blyons2021 - 2020</footer>
 </body>
 </html>
