--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Creative Website Title<title>
+  <title>Creative Website Title</title>
 </head>
 <body>
   <h1>Welcome to my website!</h1>
