--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
   <h1>Welcome to my website!</h1>
-  <h3>Blog Post 1: Thoughts on "The Pragmatic Programmer"</h3>
+  <h2>Blog Post 2:</h2>
+  <a href="post2.html">Link to Blog Post 2</a>
+  <h3>Blog Post 1: Thoughts on "The Pragmatic Programmer" (1/20/2020)</h3>
   <p>
     In Chapter 1 of "The Pragmatic Programmer", the section that stood out to me the most was 
     section 2, "Software Entropy".  As described in the beginning of this section, "Entropy is
