--- a/post2.html
+++ b/post2.html
@@ -2,10 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Creative Website Title</title>
+  <title>Blog Post 2</title>
 </head>
 <body>
-  <h1>Welcome to my website!</h1>
   <h3>Blog Post 2:</h3>
   <p>In lecture, we discussed the example of developing a platform for volunteers and administrators
   to perform various tasks, relating to the events needing volunteers (i.e., adding a calendar
