--- a/post2.html
+++ b/post2.html
@@ -14,6 +14,7 @@
   the calendar is formatted (from grid to list, and vise versa) and linking the page of the event
   to the calendar (so that when the name of the event is clicked on, it goes to the page of the 
   event). </p>
+  <a href="index.html">Home</a>
   <footer>blyons2021 - 2020</footer>
 </body>
 </html>
