--- a/post2.html
+++ b/post2.html
@@ -5,7 +5,7 @@
   <title>Blog Post 2</title>
 </head>
 <body>
-  <h3>Blog Post 2:</h3>
+  <h3>Blog Post 2: Stories and Features (1/27/2020)</h3>
   <p>In lecture, we discussed the example of developing a platform for volunteers and administrators
   to perform various tasks, relating to the events needing volunteers (i.e., adding a calendar
   to look at upcoming events and a list of volunteers volunteering at a certain event, along with their
