--- a/post2.html
+++ b/post2.html
@@ -16,7 +16,7 @@
   event). </p>
   
   <p>The first schematic of the calendar is shown below:</p>
-  <img src="volunteer_calendar.jpg" class="inline"/>
+  <img src="volunteer_calendar.JPG" class="inline"/>
   
   <a href="index.html">Home</a>
   <footer>blyons2021 - 2020</footer>
