--- a/post2.html
+++ b/post2.html
@@ -17,7 +17,9 @@
   
   <p>The first schematic of the calendar is shown below:</p>
   <img src="volunteer_calendar.JPG" class="inline"/>
-  
+  <p>This schematic shows the calendar of events.  When a date is selected, the volunteer events
+  for that day will be displayed in a list, just to the right of the calendar.  The event name also
+  shows the time(s) of the event.</p>
   <a href="index.html">Home</a>
   <footer>blyons2021 - 2020</footer>
 </body>
