--- a/post2.html
+++ b/post2.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Blog Post 2</title>
+  <title>Homework Assignment 2</title>
 </head>
 <body>
-  <h3>Blog Post 2: Stories and Features (1/27/2020)</h3>
+  <h3>Homework Assignment 2: Stories and Features (1/27/2020)</h3>
   <p>In lecture, we discussed the example of developing a platform for volunteers and administrators
   to perform various tasks, relating to the events needing volunteers (i.e., adding a calendar
   to look at upcoming events and a list of volunteers volunteering at a certain event, along with their
@@ -19,7 +19,26 @@
   <img src="volunteer_calendar.JPG" class="inline"/>
   <p>This schematic shows the calendar of events.  When a date is selected, the volunteer events
   for that day will be displayed in a list, just to the right of the calendar.  The event name also
-  shows the time(s) of the event.</p>
+  shows the time(s) of the event.  This will allows users to see the events happening on a certain
+  day while not being overwhelmed with ALL off the events going on in that month.  Having a setup
+  like this allows for users to select events based on their needs (in this example, this would be 
+  an event within their availability).  The user will then click on the title of the event to go to
+  the event page.</p>
+  
+  <p>The second schematic, of the event page, is shown below:</p>
+  <img src="volunteer_page.JPG" class="inline"/>
+  <p>This schematic lays out the event page.  The title of the event also includes the time and
+  date of the event.  In the event description, it includes the name of the location, as well as the address,
+  that the event will be held.  It also includes a short description of the event itself and what roles
+  are needed.  There is a chart on the right-hand side of the page displaying the names of volunteers, 
+  as well as the role of each person at the event.  Finally, beneath this chart, is a link to the signup page.</p>
+  
+  <p>Questions to consider:</p>
+  <ul style="list-style-type:circle;">
+    <li>Will users be able to seamlessly navigate through the UI?</li>
+    <li>How intricate should the connections between pages? (i.e., linking each page to 
+      one another in addition to the home page, etc)</li>
+  </ul>
   <a href="index.html">Home</a>
   <footer>blyons2021 - 2020</footer>
 </body>
