--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
   <h1>Welcome to my website!</h1>
-  <h2>Blog Post 2:</h2>
-  <a href="post2.html">Link to Blog Post 2</a>
+  <h2>Blog Post 1:</h2>
+  <a href="blogpost1.html">Link to Blog Post 1</a>
+  <h2>Homework Assignment 2:</h2>
+  <a href="post2.html">Link to Homework Assignment 2</a>
   <h3>Blog Post 1: Thoughts on "The Pragmatic Programmer" (1/20/2020)</h3>
   <p>
     In Chapter 1 of "The Pragmatic Programmer", the section that stood out to me the most was 
