--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Creative Website Title</title>
+  <title>The Best Website Ever</title>
 </head>
 <body>
   <h1>Welcome to my website!</h1>
@@ -10,27 +10,7 @@
   <a href="blogpost1.html">Link to Blog Post 1</a>
   <h2>Homework Assignment 2:</h2>
   <a href="post2.html">Link to Homework Assignment 2</a>
-  <h3>Blog Post 1: Thoughts on "The Pragmatic Programmer" (1/20/2020)</h3>
-  <p>
-    In Chapter 1 of "The Pragmatic Programmer", the section that stood out to me the most was 
-    section 2, "Software Entropy".  As described in the beginning of this section, "Entropy is
-    a term used in physics that refers to the amount of disorder in a system." Being a physics
-    major and knowing what entropy is, I thought this was an interesting way to describe the
-    idea of disorder.  The increase of disorder in software is referred to as "software rot",
-     which I thought was another interesting way to describe disorder in general when working 
-     on a group project.  Being a junior, I have ABSOLUTELY experienced software rot (especially
-     in Data Structures & Algorithms, as well as Networking). </p>
-     
-     <p>
-     Later on in this section, something called the "Broken Window Theory" was introduced.  This 
-     is described as something implemented in "...police departments in New York and other major 
-     cities to crack down on the small stuff in order to keep out the big stuff."  Connecting this 
-     to software jargan, the broken windows represent bad designs, wrong decisions, and poor code.
-       This idea of the "Broken Window Theory" is interesting to me; it is easy to connect this idea 
-       to precautions in things like choosing the theme of the project, what data structures to use, 
-       how to implement various things to make the project work, etc.  The imagery in these examples 
-       allow me to better visualize the metaphor and learn how it is relavent to the process of working 
-       on a group software project. </p>
+  <h3>Live long and prosper!</h3>
   <footer>blyons2021 - 2020</footer>
 </body>
 </html>
