--- a/blogpost1.html
+++ b/blogpost1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Blog Post 1/title>
+  <title>Blog Post 1</title>
 </head>
 <body>
   <h3>Blog Post 1: Thoughts on "The Pragmatic Programmer" (1/20/2020)</h3>
