--- a/blogpost1.html
+++ b/blogpost1.html
@@ -27,7 +27,7 @@
        allow me to better visualize the metaphor and learn how it is relavent to the process of working 
        on a group software project. </p>
        
-       <a href="index.html>Home</a>
+       <a href="index.html">Home</a>
   <footer>blyons2021 - 2020</footer>
 </body>
 </html>
